objects/TremendousSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TremendousSettings</label>
    <fields>
        <fullName>AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>CurrencyCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <label>DeliveryMethod</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <label>Denomination</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndpointURL__c</fullName>
        <label>EndpointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingSourceId__c</fullName>
        <label>FundingSourceId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestMethod__c</fullName>
        <label>RestMethod</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish_CampaignId__c</fullName>
        <label>Spanish CampaignId</label>
        <length>22</length>
        <type>Text</type>
    </fields>
</CustomObject>